[package]
name = "flamenco_radio"
version = "0.1.0"
authors = ["bahque <bahque@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
#sudo apt-file list libssl-dev
#tokio = { version = "0.2", features = ["full"] }